# flask_contacts

./: config.py  manager.py  pyproject.toml
app/: __init__.py  decorator.py  models.py  request.py  schemas.py
app/resources/: auth.py  contacts.py
migrations/versions/: ac843f8526f1_.py
